added decryption inverse operations, renamed AES128Encryptor to AES128 and added decryption

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(aes_cpp)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(aes_cpp main.cpp AES128Encryptor.cpp AES128Encryptor.h Constructs/Key128.cpp Constructs/Key128.h Constants.h Constructs/StateMatrix.cpp Constructs/StateMatrix.h Util.cpp Util.h)
+add_executable(aes_cpp main.cpp AES128.cpp AES128.h Constructs/Key128.cpp Constructs/Key128.h Constants.h Constructs/StateMatrix.cpp Constructs/StateMatrix.h Util.cpp Util.h)
