added SHA256 hashing algorithm, TODO: cleanup, make prettier

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(aes_cpp)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(aes_cpp main.cpp AES128.cpp AES128.h Constructs/Key128.cpp Constructs/Key128.h Constants.h Constructs/StateMatrix.cpp Constructs/StateMatrix.h Util.cpp Util.h)
+add_executable(aes_cpp main.cpp AES128.cpp AES128.h Constructs/Key128.cpp Constructs/Key128.h Constants.h Constructs/StateMatrix.cpp Constructs/StateMatrix.h Util.cpp Util.h "IO Handling/Input.cpp" "IO Handling/Input.h" SHA256/SHA256.cpp SHA256/SHA256.h SHA256/DataTypes.cpp SHA256/DataTypes.h)
