Major AES cleanup, removed ungodly std::byte

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(aes_cpp)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(aes_cpp main.cpp Constructs/Key128.cpp Constructs/Key128.h Constants.h Constructs/StateMatrix.cpp Constructs/StateMatrix.h Util.cpp Util.h "IO Handling/Input.cpp" "IO Handling/Input.h" SHA256/SHA256.cpp SHA256/SHA256.h SHA256/SHA256.cpp SHA256/SHA256.h includes/argparse.hpp AES128.cpp AES128.h)
+add_executable(aes_cpp main.cpp AES128/Constructs/Key128.cpp AES128/Constructs/Key128.h AES128/Constants.h AES128/Constructs/StateMatrix.cpp AES128/Constructs/StateMatrix.h "IO Handling/Input.cpp" "IO Handling/Input.h" SHA256/SHA256.cpp SHA256/SHA256.h SHA256/SHA256.cpp SHA256/SHA256.h includes/argparse.hpp AES128/AES128.cpp AES128/AES128.h AES128/DataTypes.cpp AES128/DataTypes.h)
