Refactor AES, remove StateMatrix, begin move to std::span, file enc/dec

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(aes_cpp)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(aes_cpp main.cpp AES128/Constants.h AES128/Constructs/StateMatrix.cpp AES128/Constructs/StateMatrix.h "IO Handling/Input.cpp" "IO Handling/Input.h" SHA256/SHA256.cpp SHA256/SHA256.h SHA256/SHA256.cpp SHA256/SHA256.h includes/argparse.hpp AES128/AES.cpp AES128/AES.h AES128/DataTypes.cpp AES128/DataTypes.h AES128/Constructs/Key.cpp AES128/Constructs/Key.h Base64/Base64.cpp Base64/Base64.h)
+add_executable(aes_cpp main.cpp AES/Constants.h "IO Handling/Input.cpp" "IO Handling/Input.h" SHA256/SHA256.cpp SHA256/SHA256.h SHA256/SHA256.cpp SHA256/SHA256.h includes/argparse.hpp AES/AES.cpp AES/AES.h AES/DataTypes.cpp AES/DataTypes.h AES/Constructs/Key.cpp AES/Constructs/Key.h Base64/Base64.cpp Base64/Base64.h AES/RoundOperations.cpp)
